apps/productivity/freshrss/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: freshrss
  namespace: productivity
spec:
  selector:
    app: freshrss
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
